--- a/KHS_done.html
+++ b/KHS_done.html
@@ -69,7 +69,7 @@
     p {
         font-weight: bold;
     }
-    p.konten {
+    .konten {
         text-align: center;
         font-weight: unset;
         padding: 0px;
